// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it matches snapshot for danger 1`] = `
<DocumentFragment>
  <div
    class="Alert-danger"
  >
    <p>
      NOOOOOOOO
    </p>
    <p>
      Why did you do that?????
    </p>
  </div>
</DocumentFragment>
`;

exports[`it matches snapshot for success 1`] = `
<DocumentFragment>
  <div
    class="Alert-success"
  >
    <p>
      You did it!
    </p>
    <p>
      You have an incredible work ethic!
    </p>
  </div>
</DocumentFragment>
`;
